2008-06-18  Glenn Morris  <rgm@gnu.org>

	* mouse.el (buffer-face-mode-invoke): Declare.

	* Makefile.in (ELCFILES): Add org/org-id.elc.

	* calendar/holidays.el (calendar-cursor-holidays): Accept optional date.
	* calendar/cal-menu.el (cal-menu-holidays-menu):
	Use calendar-cursor-holidays rather than cal-menu-today-holidays.
	(cal-menu-today-holidays): Remove function.

	* calendar/cal-menu.el (cal-menu-holiday-window-suffix): Simplify.
	(cal-menu-list-holidays-year, cal-menu-list-holidays-following-year)
	(cal-menu-list-holidays-previous-year, calendar-mouse-goto-date):
	Remove unused functions.
	(calendar-mouse-view-diary-entries): Use format rather than concat.

	* calendar/cal-menu.el (cal-menu-x-popup-menu): Turn it into a macro.
	(calendar-mouse-holidays, calendar-mouse-view-diary-entries)
	(calendar-mouse-print-dates): Adapt for cal-menu-x-popup-menu change.

	* calendar/cal-menu.el (cal-menu-event-to-date): Remove function.
	(calendar-mouse-holidays, calendar-mouse-view-diary-entries)
	(calendar-mouse-view-other-diary-entries, calendar-mouse-print-dates)
	(cal-menu-set-date-title): Use calendar-cursor-to-date rather than
	cal-menu-event-to-date.

	* calendar/cal-html.el (cal-html-cursor-month, cal-html-cursor-year):
	Handle mouse events.
	* calendar/cal-tex.el (cal-tex-cursor-year)
	(cal-tex-cursor-year-landscape, cal-tex-cursor-filofax-year)
	(cal-tex-cursor-month-landscape, cal-tex-cursor-month)
	(cal-tex-cursor-week, cal-tex-cursor-week2, cal-tex-cursor-week-iso)
	(cal-tex-cursor-week-monday, cal-tex-cursor-filofax-2week)
	(cal-tex-cursor-filofax-week, cal-tex-cursor-filofax-daily)
	(cal-tex-cursor-day): Handle mouse events.  Rename ARG to N.
	(cal-tex-cursor-month): Mark N as optional.
	* calendar/cal-menu.el (calendar-mouse-tex-day)
	(calendar-mouse-tex-week, calendar-mouse-tex-week2)
	(calendar-mouse-tex-week-iso, calendar-mouse-tex-week-monday)
	(calendar-mouse-tex-filofax-daily, calendar-mouse-tex-filofax-2week)