@@ -1,3 +1,7 @@
+2008-06-18  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* faces.el (face-set-after-frame-default): Don't exclude `default'.
+
 2008-06-18  Glenn Morris  <rgm@gnu.org>
 
 	* mouse.el (buffer-face-mode-invoke): Declare.
